--- a/bayes/chapter_01.ipynb
+++ b/bayes/chapter_01.ipynb
@@ -1,5 +1,852 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A probability is a fraction of a finite set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>caseid</th>\n",
+       "      <th>year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>polviews</th>\n",
+       "      <th>partyid</th>\n",
+       "      <th>indus10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4970.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2670.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6870.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7860.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   caseid  year   age  sex  polviews  partyid  indus10\n",
+       "0       1  1974  21.0    1       4.0      2.0   4970.0\n",
+       "1       2  1974  41.0    1       5.0      0.0   9160.0\n",
+       "2       5  1974  58.0    2       6.0      1.0   2670.0\n",
+       "3       6  1974  30.0    1       5.0      4.0   6870.0\n",
+       "4       7  1974  48.0    1       5.0      4.0   7860.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#https://gss.norc.org/\n",
+    "gss = pd.read_csv('./gss_bayes.csv')\n",
+    "gss.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3         True\n",
+       "4        False\n",
+       "         ...  \n",
+       "49285    False\n",
+       "49286    False\n",
+       "49287    False\n",
+       "49288    False\n",
+       "49289    False\n",
+       "Name: indus10, Length: 49290, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bankers are defined by indus10 = 6870\n",
+    "banker = gss.indus10 == 6870\n",
+    "banker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of bankers 728\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Total number of bankers {banker.sum()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of bankers 0.014769730168391155\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Fraction of bankers {banker.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob(A):\n",
+    "    # Returns the probability of A, assumes A is a series of true/false values\n",
+    "    return A.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of bankers using prob function 0.014769730168391155\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Fraction of bankers using prob function {prob(banker)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "female = gss.sex == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction that are female 0.5378575776019476\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Fraction that are female {prob(female)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Political Views and Parties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Political views, 1=Extremely liberal, 7=Extremely conservative, 4=moderate\n",
+    "liberal = gss.polviews <= 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of being liberal 0.27374721038750255\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Probability of being liberal {prob(liberal)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Party id: 0=strong democrat, 3=independent, 6=strong republican, 7=other\n",
+    "democrat = gss.partyid <= 1 # not strong democrat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prob of being democrat 0.3662609048488537\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Prob of being democrat {prob(democrat)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conjunction\n",
+    "- `AND` operation between two propositions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of banker 0.014769730168391155, probability of democrat 0.3662609048488537\n",
+      "Probabiliy of banker AND democrat 0.004686548995739501\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The probability of banker {prob(banker)}, probability of democrat {prob(democrat)}')\n",
+    "print(f'Probabiliy of banker AND democrat {prob(banker & democrat)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conjunction is commutative, therefore democrat AND banker should be the same 0.004686548995739501\n",
+      "Asserting: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Conjunction is commutative, therefore democrat AND banker should be the same {prob(democrat & banker)}')\n",
+    "print(f'Asserting: {prob(democrat & banker) == prob(banker & democrat)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conditional Probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of being a democrat, given you are a liberal 0.5206403320240125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Of all the respondents who are liberal, what fraction are democrats?\n",
+    "\n",
+    "#1. Get all respondents who are liberal (the liberal variable)\n",
+    "#2. Compute the fraction of the selected respondents who are democrat\n",
+    "selected = democrat[liberal]\n",
+    "print(f'Probability of being a democrat, given you are a liberal {prob(selected)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of being female, given banker 0.7706043956043956\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the probability that a respondent is female, given they are a banker\n",
+    "selected = female[banker]\n",
+    "print(f'Probability of being female, given banker {prob(selected)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conditional(proposition, given):\n",
+    "    \"\"\"Probability of A conditioned on given\"\"\"\n",
+    "    return prob(proposition[given])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability liberal given female 0.27581004111500884\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Probability liberal given female {conditional(liberal, given=female)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conditionals are NOT commutative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banker given female 0.02116102749801969 != female given banker 0.7706043956043956\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Banker given female {conditional(banker, given=female)} != female given banker {conditional(female, given=banker)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Condition and Conjunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability female, given liberal and democrat 0.576085409252669\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Probability female, given liberal and democrat {conditional(female, given=liberal & democrat)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liberal female, given banker 0.17307692307692307\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Liberal female, given banker {conditional(liberal & female, given=banker)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Laws of Probability\n",
+    "\n",
+    "Theorem 1: Using a conjunction to compute a conditional probability.\n",
+    "\n",
+    "Theorem 2: Using a conditional probability to compute a conjunction.\n",
+    "\n",
+    "Theorem 3: Using conditional(A, B) to compute conditional(B, A).\n",
+    "\n",
+    "1. `P(A)` is the probability of proposition A\n",
+    "2. `P(A and B)` is the probability of the conjunction A and B, that is, the probability both are true\n",
+    "3. `P(A|B)` is the conditional probability of A given B is true. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Theorem 1: What fraction of bankers are female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First method 0.7706043956043956\n",
+      "Second method 0.7706043956043956\n",
+      "Third method 0.7706043956043956\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('First method', female[banker].mean())\n",
+    "print('Second method', conditional(female, given=banker))\n",
+    "\n",
+    "#third method\n",
+    "print('Third method', prob(female & banker) / prob(banker))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Third method can be summarized as:\n",
+    "'''\n",
+    "P(A|B) = P(A and B) / P(B) -> Theorem 1\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Theorem 2\n",
+    "\n",
+    "Take Theorem 1, and do some algebra:\n",
+    "`P(A and B) = P(A|B) * P(B)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.1425238385067965)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#liberal and democrat\n",
+    "prob(liberal & democrat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.1425238385067965)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob(democrat) * conditional(liberal, given=democrat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Theorem 3\n",
+    "\n",
+    "Given conjunctions are commutative: `P(A and B) = P(B and A)`. Therefore, apply theorem 2 to both side:\n",
+    "\n",
+    "`P(B)P(A|B) = P(A)P(B|A)`. \n",
+    "\n",
+    "This leaves theorem 3:\n",
+    "`P(A|B) = P(A)P(B|A)/P(B)`, aka Bayes theorem!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.2239010989010989)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conditional(liberal, given=banker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.2239010989010989)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob(liberal) * conditional(banker, given=liberal) / prob(banker)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Law of Total Probability\n",
+    "\n",
+    "`P(A) = P(B_1 and A) + P(B_2 and A)`\n",
+    "\n",
+    "In words, the total probability of\n",
+    "is the sum of two possibilities: either\n",
+    "and\n",
+    "are true or\n",
+    "and\n",
+    "are true. But this law applies only if\n",
+    "and\n",
+    "\n",
+    "are:\n",
+    "\n",
+    "- Mutually exclusive, which means that only one of them can be true, and\n",
+    "\n",
+    "- Collectively exhaustive, which means that one of them must be true.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.014769730168391155)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob(banker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male = gss.sex == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.014769730168391155)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob(female & banker) + prob(male & banker)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using theorem 2, we can rewrite as \n",
+    "`P(A) = P(B_1) P(A|B_1) + P(B_2)(A|B_2)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.014769730168391153)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob(male) * conditional(banker, given=male) + prob(female) * conditional(banker, given=female)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generalizes to:\n",
+    "`P(A) = SUM_i[P(B_i)P(A|B_i)]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "polviews\n",
+       "1.0     1442\n",
+       "2.0     5808\n",
+       "3.0     6243\n",
+       "4.0    18943\n",
+       "5.0     7940\n",
+       "6.0     7319\n",
+       "7.0     1595\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to test the generalization\n",
+    "B = gss.polviews\n",
+    "B.value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.005822682085615744)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 4\n",
+    "prob(B==i) * conditional(banker, given=B==i) #probability of moderate banker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.014769730168391157)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# probability of banker, by using total probability of political views\n",
+    "sum(prob(B ==i) * conditional(banker, given=B==i) for i in range(1, 8)) # matches from above when using male/female"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".venv",
