--- a/bayes/chapter_04.ipynb
+++ b/bayes/chapter_04.ipynb
@@ -584,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uv_test",
+   "display_name": ".venv",
    "language": "python",
-   "name": "uv_test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
