Getting started with ch7 exercises

--- a/bayes/chapter_07.ipynb
+++ b/bayes/chapter_07.ipynb
@@ -1418,6 +1418,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Pmf and the corresponding Cdf are equivalent in the sense that they contain the same information, so you can convert from one to the other.\n",
+    "The primary difference between them is performance: some operations are faster and easier with a Pmf; others are faster with a Cdf."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
